# cronlytic-mcp-server

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: example_config.json
docs/: 01-example-clients.md  02-core-concepts.md  03-development-guides.md  04-specification.md  05-examples-and-faqs.md  MCP_Python_SDK_README.md  README.md  claude-desktop-integration.md  cronlytic-API-specification.md  cronlytic-mcp-server-plan.md  deployment-guide.md  example-workflows.md  project-completion-summary.md  test-report.md
src/: __init__.py  cronlytic_client.py  server.py
src/prompts/: __init__.py  api_integration.py  job_management.py  troubleshooting.py  workflow_optimization.py
src/resources/: __init__.py  job_resources.py  templates.py
src/tools/: __init__.py  health_check.py  job_control.py  job_management.py  performance_monitoring.py
src/utils/: __init__.py  auth.py  errors.py  performance.py  validation.py
tests/: __init__.py  test_job_management.py  test_phase3_tools.py  test_phase4_resources.py  test_phase5_prompts.py
